--- a/themes/awesome-custom/layouts/partials/footer.html
+++ b/themes/awesome-custom/layouts/partials/footer.html
@@ -1,6 +1,5 @@
 <footer class="footer">
     <div class="footer-content">
-        <p>&copy; {{ now.Year }} {{ .Site.Title }}. All rights reserved.</p>
-        <p>Built with <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a></p>
+        <p>&copy; {{ now.Year }} {{ .Site.Title }}</p>
     </div>
 </footer> 
