--- a/themes/awesome-custom/layouts/_default/list.html
+++ b/themes/awesome-custom/layouts/_default/list.html
@@ -7,7 +7,7 @@
         {{ end }}
     </header>
 
-    {{ $sections := slice "ml" "system-design" "current-reads" "posts" "projects" }}
+    {{ $sections := slice "ml" "system-design" "current-reads" "posts" }}
     {{ $allPosts := slice }}
     {{ range $sections }}
         {{ $section := . }}
